--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./home.html"
+        <a class="navbar-brand" href="./index.html"
           ><img src="./images/logo.svg" alt=""
         /></a>
         <button
