--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <a href="#">Госуслуги</a>
           <a href="#">Почта</a>
           <a href="#">ВК</a>
-          <a href="#">Главная</a>
+          <a href="./index.html">Главная</a>
         </div>
       </div>
     </section>
