--- a/registration.html
+++ b/registration.html
@@ -141,8 +141,8 @@
           <!--left-content -->
           <ul class="list-unstyled">
             <li><img class="mb-4" src="./images/logo.svg" alt="" /></li>
-            <li>Права защищены. 2022.</li>
-            <li>Устинов Владислав</li>
+            <li>Права защищены.</li>
+            <li>© В. Д. Устинов, 2022</li>
           </ul>
         </div>
         <div
