--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script src="https://use.fontawesome.com/80d00e388c.js"></script>
-    <link href="./css/reset.css" rel="stylesheet" />
-    <link href="./css/normalize.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
     <script
@@ -41,14 +39,22 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/adaptation.css" />
     <title>Газпром Газораспределение Ленинградская область в г. Выборге</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
-          ><img src="./images/logo.svg" alt=""
-        /></a>
+        <a href="./index.html" class="navbar-brand">
+          <img src="./images/logo.svg" alt="" class="logotype" /><audio
+            id="au"
+            src="sound.mp3.mp3"
+          ></audio
+          ><strong
+            class="txt w-25"
+            style="left: 20px; position: relative"
+          ></strong>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -73,7 +79,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./contacts.html">Связь с нами</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item not-this">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                   <a
@@ -121,7 +127,7 @@
           <label for="validationCustom01" class="form-label">Имя</label>
           <input
             type="text"
-            class="form-control"
+            class="form-control w-75"
             id="validationCustom01"
             required
           />
@@ -131,7 +137,7 @@
           <label for="validationCustom02" class="form-label">Фамилия</label>
           <input
             type="text"
-            class="form-control"
+            class="form-control w-75"
             id="validationCustom02"
             required
           />
@@ -143,7 +149,7 @@
           >
           <textarea
             type="text"
-            class="form-control"
+            class="form-control w-25"
             id="validationCustom03"
             required
           ></textarea>
@@ -196,6 +202,7 @@
         </div>
       </div>
     </section>
+    <script src="./js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
