--- a/findus.html
+++ b/findus.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script src="https://use.fontawesome.com/80d00e388c.js"></script>
-    <link href="./css/reset.css" rel="stylesheet" />
-    <link href="./css/normalize.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
     <script
@@ -41,14 +39,22 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/adaptation.css" />
     <title>Газпром Газораспределение Ленинградская область в г. Выборге</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
-          ><img src="./images/logo.svg" alt=""
-        /></a>
+        <a href="./index.html" class="navbar-brand">
+          <img src="./images/logo.svg" alt="" class="logotype" /><audio
+            id="au"
+            src="sound.mp3.mp3"
+          ></audio
+          ><strong
+            class="txt w-25"
+            style="left: 20px; position: relative"
+          ></strong>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -103,28 +109,40 @@
     </nav>
     <div class="content-find">
       <div class="container">
-        <div style="width: 100%">
-          <iframe
-            scrolling="no"
-            marginheight="0"
-            marginwidth="0"
-            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(%D0%93%D0%B0%D0%B7%D0%BF%D1%80%D0%BE%D0%BC%20%D0%93%D0%B0%D0%B7%D0%BE%D1%80%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            width="100%"
-            height="600"
-            frameborder="0"
-            ><a href="https://www.maps.ie/distance-area-calculator.html"
-              >distance maps</a
-            ></iframe
-          >
+        <div class="row">
+          <div class="col-6 d-flex align-items-center justify-content-center">
+            <ul class="list-unstyled findus">
+              <h4>Наш адрес:</h4>
+              <li>Г. Выборг, ул. Выборгская, 17.</li>
+              <li>с пн-пт: 08:00-17:00</li>
+              <li>сб-вс: выходной</li>
+              <li>Телефон: 88137824857</li>
+              <li class="mb-3">Почта: vb.priem@gazprom-lenobl.ru</li>
+              <hr />
+              <h4>Как до нас добраться:</h4>
+              <li>Легче всего на автомобиле, по навигатору.</li>
+              <li>
+                Автобус 1/6: остановка около ИЭБ, пройти пешком 12 минут до
+                церки, после налево и направо..
+              </li>
+            </ul>
+          </div>
+          <div class="col-6">
+            <h4 class="mb-4">Карта с меткой:</h4>
+            <iframe
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+              src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(%D0%93%D0%B0%D0%B7%D0%BF%D1%80%D0%BE%D0%BC%20%D0%93%D0%B0%D0%B7%D0%BE%D1%80%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+              width="100%"
+              height="600"
+              frameborder="0"
+              ><a href="https://www.maps.ie/distance-area-calculator.html"
+                >distance maps</a
+              ></iframe
+            >
+          </div>
         </div>
-        <ul class="list-unstyled findus">
-          <h4>Наш адрес:</h4>
-          <li>Г. Выборг, ул. Выборгская, 17.</li>
-          <li>с пн-пт: 08:00-17:00</li>
-          <li>сб-вс: выходной</li>
-          <li>Телефон: 88137824857</li>
-          <li>Почта: vb.priem@gazprom-lenobl.ru</li>
-        </ul>
       </div>
     </div>
     <section class="footer my-footer">
@@ -162,6 +180,7 @@
         </div>
       </div>
     </section>
+    <script src="./js/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
