--- a/authorization.html
+++ b/authorization.html
@@ -138,7 +138,7 @@
           >
           <input
             type="email"
-            class="form-control"
+            class="form-control w-25"
             style="width: 500px"
             id="validationCustom04"
             required
@@ -149,7 +149,7 @@
           <label for="validationCustom05" class="form-label">Пароль</label>
           <input
             type="password"
-            class="form-control"
+            class="form-control w-25"
             style="width: 500px"
             id="validationCustom05"
             required
