--- a/authorization.html
+++ b/authorization.html
@@ -132,7 +132,7 @@
         <p class="d-flex justify-content-center">Или</p>
       </div>
       <form class="row g-2 needs-validation" novalidate>
-        <div class="col-mb-3">
+        <div class="col-mb-3 mb-3">
           <label for="validationCustom04" class="form-label"
             >Адрес электронной почты</label
           >
@@ -145,7 +145,7 @@
           />
           <div class="invalid-feedback">Введите вашу почту</div>
         </div>
-        <div class="col-mb-3">
+        <div class="col-mb-3 mb-3">
           <label for="validationCustom05" class="form-label">Пароль</label>
           <input
             type="password"
