--- a/registration.html
+++ b/registration.html
@@ -133,7 +133,7 @@
         <p class="d-flex justify-content-center">Или</p>
       </div>
       <form class="row g-2 needs-validation" novalidate>
-        <div class="col-mb-6">
+        <div class="col-mb-6 mb-3">
           <label for="validationCustom05" class="form-label"
             >Адрес электронной почты</label
           >
@@ -146,7 +146,7 @@
           />
           <div class="invalid-feedback">Введите вашу почту</div>
         </div>
-        <div class="col-mb-7">
+        <div class="col-mb-7 mb-3">
           <label for="validationCustom01" class="form-label">Имя</label>
           <input
             type="text"
@@ -157,7 +157,7 @@
           />
           <div class="invalid-feedback">Введите имя</div>
         </div>
-        <div class="col-mb-6">
+        <div class="col-mb-6 mb-3">
           <label for="validationCustom07" class="form-label"
             >Придумайте свой пароль</label
           >
